--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": {
-    "name": "Oleksii Nadtochii <a.nadtochey@gmail.com>",
+    "name": "Oleksii Nadtochii",
     "email": "a.nadtochey@gmail.com"
   },
   "license": "GPL-2.0-or-later"
